<resources>
    <string name="app_name">Health Grid</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" translatable="false">AIzaSyADjOLerHkN5zIOWsNednhATI_5U7Nd5j0</string>
    <string name="welcome_image_girl">welcome_image_girl</string>
    <string name="welcome_background">welcome_background</string>
    <string name="start_journey">Start Journey</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="agree_privacy_policy">I agree with Privacy Policy</string>
    <string name="btn_track_location_text">Agree to Track Location</string>
    <string name="back_label">Back</string>
    <string name="privacy_policy_label">Privacy policy</string>
    <string name="title_activity_test_maps">Map</string>
    <string name="my_status">My status</string>
    <string name="configuration">Configuration</string>
    <string name="legend_high_density">The high density of infected people</string>
    <string name="legend_low_density">The low density of infected people</string>
    <string name="legend">Legend</string>
    <string name="bottom_sheet_instructions">Set your health status so we can notify health authorities and others who have crossed paths with you. This will have to stop the spread of the virus.</string>
    <string name="healthy_string">I am Healthy</string>
    <string name="infected_string">I have COVID-19</string>
    <string name="health_history">Health History</string>
    <string name="turn_off_tracking">Turn Off Tracking Forever</string>
    <string name="delete_tracking_data">Delete All Tracking Data</string>
    <string name="turn_off_for_time">Turn Off Tracking for 8 Hours</string>
    <string name="turn_on">Turn On Tracking</string>
    <string name="privacy_policy_bottom_sheet">Privacy Policy\nof tracking location</string>
    <string name="close_string">Close</string>
    <string name="delete_data_title">Delete tracking data</string>
    <string name="delete_data_message">Please, confirm the deletion of your movement data for the last 2 weeks</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="delete_button_label">Delete</string>
    <string name="positive_push_dialog_message">You may have been in close contact with someone who was infected on the following date(s)</string>
    <string name="positive_push_dialog_message_suffix1">once</string>
    <string name="positive_push_dialog_message_suffix2">times</string>
    <string name="negative_push_dialog_message">You have not been in close contact with infected people.</string>
    <string name="history_title">History</string>
    <string name="approov_config">eyJhbGciOiJFUzI1NiIsInR5cCI6IkpXVCJ9.eyJ2ZXJzaW9uIjp7Im1ham9yX2NvdW50Ijo1LCJtaW5vcl9jb3VudCI6MH0sImFjY291bnRfaWQiOiJoZ2EiLCJrZXlfaWQiOiJrZXkwIiwicHVibGljX2tleSI6Ik1Ga3dFd1lIS29aSXpqMENBUVlJS29aSXpqMERBUWNEUWdBRUtRd1U5OE41YlRYbFc4M0hEMUJ4WVhqYXJ0M3V6K01VRUljYWI1MGtza2pPSTF2SERMcWh0RlF2alRRMmpzcjNjOFZjMGZBNzVJTEJYcGNyclhzTGpBPT0iLCJiYWNrc3RvcF90aW1lb3V0IjozMDAwMCwibmV0d29ya19ydWxlcyI6eyJhdHRlc3QiOltbImF0dGVzdDEiLCJodHRwczovL2F0dC1oZ2EuYXBwcm9vdnIuaW8vYXR0ZXN0Iiw2MDAwLFs0MDgsNTAwLDUwMiw1MDRdLDUwMCwxNTAwXSxbImF0dGVzdDIiLCJodHRwczovL2F0dC1oZ2EuYXBwcm9vdnIuaW8vYXR0ZXN0IiwzMDAwLFs0MDgsNTAwLDUwMiw1MDRdLDUwMCwxNTAwXV0sImNhbGlicmF0ZSI6W1siY2FsaWJyYXRlIiwiaHR0cHM6Ly9hdHQtaGdhLmFwcHJvb3ZyLmlvL2F0dGVzdCIsMjAwMCxbXSwwLDBdXSwiY29uZmlnIjpbWyJmZXRjaCIsImh0dHBzOi8vYXR0LWhnYS5hcHByb292ci5pby9hdHRlc3QiLDIwMDAsW10sMCwwXV0sImZhaWxvdmVyIjpbWyJmYWlsb3ZlcjEiLCJodHRwczovL2hhaW5lLmFwcHJvb3ZhbC5jb20vdG9rZW4vYXR0LWhnYS9pbmRleC5odG1sIiw0MDAwLFs0MDgsNTAwLDUwMiw1MDRdLDAsMTAwMF0sWyJmYWlsb3ZlcjIiLCJodHRwczovL2hhaW5lLmFwcHJvb3ZhbC5jb20vdG9rZW4vYXR0LWhnYS9pbmRleC5odG1sIiwyMDAwLFtdLDAsMF1dLCJyZWF0dGVzdCI6W1sicmVhdHRlc3QxIiwiaHR0cHM6Ly9hdHQtaGdhLmFwcHJvb3ZyLmlvL2F0dGVzdCIsNjAwMCxbNDA4LDUwMCw1MDIsNTA0XSw1MDAsMTUwMF0sWyJyZWF0dGVzdDIiLCJodHRwczovL2F0dC1oZ2EuYXBwcm9vdnIuaW8vYXR0ZXN0IiwzMDAwLFs0MDgsNTAwLDUwMiw1MDRdLDUwMCwxNTAwXV0sInJlZnJlc2giOltbInJlZnJlc2gxIiwiaHR0cHM6Ly9hdHQtaGdhLmFwcHJvb3ZyLmlvL2F0dGVzdCIsNjAwMCxbNDA4LDUwMCw1MDIsNTA0XSw1MDAsMTUwMF0sWyJyZWZyZXNoMiIsImh0dHBzOi8vYXR0LWhnYS5hcHByb292ci5pby9hdHRlc3QiLDMwMDAsWzQwOCw1MDAsNTAyLDUwNF0sNTAwLDE1MDBdXSwicmVwb3J0IjpbWyJyZXBvcnQiLCJodHRwczovL2F0dC1oZ2EuYXBwcm9vdnIuaW8vYXR0ZXN0IiwzMDAwLFtdLDAsMF1dfSwiYXBwcm9vdl9waW5zIjp7ImF0dC1oZ2EuYXBwcm9vdnIuaW8iOnsicHVibGljLWtleS1zaGEyNTYiOlsib3ErVWorMlRZTWcxM3R4aDFwWFcwL1ZMQWtvblUzVG5vUHI1aGZ4UFpWYz0iXX19LCJ1c2VyX2FwaV9waW5zIjp7InNoYXBlcy5hcHByb292LmlvIjp7InB1YmxpYy1rZXktc2hhMjU2IjpbImVXdHNhb0dnNUhhMitoTEh6L3gxS204TThLb2F0djNTTkxJRkxCZkVwdjQ9Il19fX0.5BtrqLAWMMv6L6HIeIGSVyIl96DgZ3h4Og1zPRy9amb6f9tlYNS7caAhS_WCqiLAYmctDSbIY8TzrTnHl7VZQA</string>
    <string name="date_picker_string">Pick a date</string>
    <string name="history_pop_up_message">Select a date to see statistics for that day</string>
    <string name="check_exposure">Check Exposure</string>
    <string name="open_app_settings_title">Permission for Location was denied</string>
    <string name="open_app_settings_message">Please enable access to Location in the app Settings</string>
    <string name="open_app_settings_positive">Settings</string>
    <string name="attention">Attention</string>
    <string name="ok_label">OK</string>
    <string name="center_dot">·</string>
    <string name="offline_mode_message">You are in offline mode.\nPlease connect to the internet to view the data</string>
    <string name="your_exposure">Your exposure</string>
    <string name="check_exposure_tip">Location Tracking based HealthGrid Alliance Contact tracking App.\n\nClick on the button to get your exposure \nto COVID-19 Notification.</string>
    <string name="skip">Skip</string>
    <string name="exposure_true_message">You have recently  been exposed \nto someone who has tested positive COVID-19. </string>
    <string name="exposure_false_message">You have not been in close contact with infected people.</string>
    <string name="exposure_more_info">More information</string>
    <string name="exposure_main_menu">Main menu</string>
    <string name="exposures_past_days">Exposures in past 14 days</string>
    <string name="exposures">Exposures</string>
    <string name="possible_exposure">Possible Exposure</string>
    <string name="confirm_status_start_header">Notify Others</string>
    <string name="confirm_status_verify_header">Verify Your Positive Diagnosis</string>
    <string name="confirm_status_done_header">Your Positive Diagnosis Has Been Shared</string>
    <string name="confirm_status_start_message">Share a positive diagnosis</string>
    <string name="confirm_status_verify_message">The unique test identifier that came with your COVID-19 test can be used to verify your positive diagnosis.</string>
    <string name="confirm_status_done_message">Please self-quarantine at home for the next 14 days</string>
    <string name="confirm_status_start_tooltip">If you tested positive for the virus that causes COVID-19, you can choose to share your diagnosis. This will help others in your community contain the spread of the virus.</string>
    <string name="confirm_status_start_button_text">Share a Positive Diagnosis</string>
    <string name="confirm_status_verify_button_text">Next</string>
    <string name="confirm_status_done_button_text">Done</string>
    <string name="identifier_string">Unique Test Identifier</string>
    <string name="share_location_dialog_title">Share your locations from this device in the last 14 days?</string>
    <string name="share_location_dialog_message">Sharing your Location from the past 14 days helps the app determine who should be notified that they may have been exposed to COVID-19</string>
    <string name="share_location_dialog_positive">Allow</string>
    <string name="share_location_dialog_negative">Dont\'t Allow</string>
    <string name="no_geolocation_message">The mobile application can not access geolocation data.\n\nTo connect to the satellites, make sure that you are on the street and restart the application</string>
</resources>
