<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_exposure"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/view_pager_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_area"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="2">

        <ImageView
            android:id="@+id/exposure_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/splash_logo" />

        <LinearLayout
            android:id="@+id/text_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/exposure_title"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="8dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/your_exposure"
                android:textAlignment="textStart"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/exposure_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:lineSpacingExtra="2sp"
                android:text="@string/check_exposure_tip"
                android:textAlignment="textStart"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/skip_button"
            style="@style/BaseAppButton"
            android:layout_height="24dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="12dp"
            android:background="@android:color/transparent"
            android:textColor="@color/base_color"
            android:text="@string/skip" />

        <Button
            android:id="@+id/next_button"
            style="@style/BaseAppButton"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/base_button_box_radius"
            android:text="@string/check_exposure" />
    </LinearLayout>
</RelativeLayout>