<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/leading"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:drawableStart="@drawable/ic_arrow_back"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:text="@string/back_label"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="@string/exposures"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />
        </FrameLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/exposures_past_days"
        android:textColor="#2A2D34"
        android:textSize="16sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_area"
        android:layout_below="@+id/message">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="28dp"
            app:srcCompat="@drawable/ic_background_exposures_details" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="top"
            android:layout_marginTop="8dp"
            android:background="@drawable/recyclerview_divider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/exposure_details_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:scrollbars="none" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/button_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/next_button"
            style="@style/BaseAppButton"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/base_button_box_radius"
            android:text="@string/exposure_main_menu" />
    </LinearLayout>
</RelativeLayout>